# rag_studies

./: README.md  main.py  pyproject.toml  requirements.txt
0-DataIngestparsing/: 1-dataingestion.ipynb  comands_to_start.txt
