[project]
name = "rag-udemy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.9",
    "docx2txt>=0.9",
    "faiss-cpu>=1.14.3",
    "ipykernel>=7.3.0",
    "jq>=1.12.0",
    "langchain>=1.3.13",
    "langchain-community>=0.4.2",
    "langchain-experimental>=0.4.2",
    "langchain-groq>=1.1.3",
    "langchain-huggingface>=1.2.2",
    "langchain-openai>=1.3.5",
    "langgraph>=1.2.9",
    "matplotlib>=3.11.0",
    "openpyxl>=3.1.5",
    "panda>=0.3.1",
    "pandas>=3.0.3",
    "pdfminer>=20191125",
    "pymupdf>=1.28.0",
    "pypdf>=6.14.2",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.6.0",
    "tiktoken>=0.13.0",
    "unstructured>=0.24.1",
    "wikipedia>=1.4.0",
]
